Adding changes to the portfolio

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>Update Title</title>
 
     <!-- link CSS stylesheet below -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     
     <!-- imports JS file -->
     <script defer src="script.js"></script>
@@ -18,19 +18,31 @@
     <!-- Add navbar to link all html pages. -->
     <!-- Include a short bio. -->
     <!-- Add an unordered or ordered list of your accomplishments or favorite things. -->
-    <nav>
+ <div class="tabs-one"> 
+   <img class= "logo" src = "Screenshot_2023-12-17_115411-removebg-preview (1).png">
+   </img>
+   <nav>
        <a href="index.html"><button class="btn">Home</button></a>
        <a href="about.html"><button class="btn">About Me</button></a>
        <a href="projects.html"><button class="btn">Projects</button></a>
        <a href="contact.html"><button class="btn">Contact</button></a>
     </nav>
+ </div>
 
     <div class="content">
-        <p>Your About Banner</p>
-        <p>Any message you want to put.</p>
+        <p>Hello, I'm Juveriya Ghouri!</p>
+        <p>I'm a student at Chicago Math and Science Academy and a web developer who loves to create beautiful and functional websites. I'm passionate about STEM Professions and interested in pursuing a career in STEM. I enjoy making art in my free time and tutor 7th graders at my school with Algebra concepts. </p>
+       <p>A Glimpse of My Artworks: 
+         <br>
+         <br>
+         <img class="paint" src="IMG_7569.jpg"></img>
+      <img class="paint" src="IMG_1322.jpg"></img>
+        <img class="paint" src="IMG_4283.jpg"</img>
+      </p>
     </div>
     <br>
     <br>
+
 
 
   </body>
