--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Update Title</title>
 
     <!-- link CSS stylesheet below -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     
     <!-- imports JS file -->
     <script defer src="script.js"></script>
@@ -23,16 +23,24 @@
         - LinkedIn (when completed)
         - Resume (when completed) 
     -->
+  <div class = "tabs-one">
+    <img class= "logo" src = "Screenshot_2023-12-17_115411-removebg-preview (1).png">
+    </img>
     <nav>
         <a href="index.html"><button class="btn">Home</button></a>
         <a href="about.html"><button class="btn">About Me</button></a>
         <a href="projects.html"><button class="btn">Projects</button></a>
         <a href="contact.html"><button class="btn">Contact</button></a>
      </nav>
+  </div>
 
     <div class="content">
-        <p>Your Contact Banner</p>
-        <p>Any message you want to put.</p>
+        <p>Find or Contact me at the Following:</p>
+        <p> LinkedIn: <a href="www.linkedin.com/in/juveriya-ghouri-a1a872275
+">Juveriya Ghouri</a> </p>
+      <p> Email: <a href="mailto:juveriyag06@gmail.com">juveriyag06@gmail.com</a> 
+
+</p>
     </div>
     <br>
     <br>
@@ -41,7 +49,9 @@
   </body>
 
     <!-- Add a footer to your website for it to look more authentic. -->
-    <footer>
-        <p>&copy; Code Nation 2023</p>
-    </footer>
-</html>
+  <div class = "lol">
+    <footer class = "footer" >
+          <p> Code Nation 2023</p>
+      </footer>
+  </div>
+   </html>
