--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Update Title</title>
     
     <!-- link CSS stylesheet below -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     
     <!-- imports JS file -->
     <script defer src="script.js"></script>
@@ -19,24 +19,25 @@
 
     <!-- Add a header with your name. -->
     <!-- Add a headshot (this could also be on your about or contact page instead). -->
-
-
-    <nav>
+    <div class = "tabs-one">
+      <img class= "logo" src ="Screenshot_2023-12-17_115411-removebg-preview (1).png">
+      </img>
+      <nav class = "border">
         <a href="index.html"><button class="btn">Home</button></a>
         <a href="about.html"><button class="btn">About Me</button></a>
         <a href="projects.html"><button class="btn">Projects</button></a>
         <a href="contact.html"><button class="btn">Contact</button></a>
-     </nav>
+      </nav>
+     </div>
 
     <div class="content">
-        <p>Your Hompage Banner</p>
-        <p>Any message you want to put.</p>
+        <p class="home">Welcome!</p>
+      <p>This is my portfolio website. I am a Junior at Chicago Math and Science Academy aspiring to pursue a career in STEM.  
     </div>
     <br>
     <br>
 
 
-  </body>
 
 <!-- Add a footer to your website for it to look more authentic. -->
   <footer>
@@ -44,6 +45,7 @@
   </footer>
 </html>
 
+</body>
 
 
 <!-- 
