--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <title>Update Title</title>
 
     <!-- link CSS stylesheet below -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     
     <!-- imports JS file -->
     <script defer src="script.js"></script>
@@ -24,16 +24,20 @@
         - Short description of project
         - Screenshot of project 
     -->
+  <div class="tabs-one">
+    <img class= "logo" src = "Screenshot_2023-12-17_115411-removebg-preview (1).png">
+    </img>
     <nav>
         <a href="index.html"><button class="btn">Home</button></a>
         <a href="about.html"><button class="btn">About Me</button></a>
         <a href="projects.html"><button class="btn">Projects</button></a>
         <a href="contact.html"><button class="btn">Contact</button></a>
      </nav>
+  </div>
 
     <div class="content">
-        <p>Your Projects Banner</p>
-        <p>Any message you want to put.</p>
+        <p>My Project Journey:</p>
+        <p><a href="https://final-portfolio.juveriyaghouri.repl.co/"> Portfolio Website</a></p>
     </div>
     <br>
     <br>
